resources/deployments.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homepage
  namespace: homepage
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: 700Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          volumeMounts:
            - name: kubernetes
              mountPath: /config/kubernetes.yaml
              subPath: kubernetes.yaml
            - name: settings
              mountPath: /config/settings.yaml
              subPath: settings.yaml
            - name: bookmarks
              mountPath: /config/bookmarks.yaml
              subPath: bookmarks.yaml
            - name: custom-css
              mountPath: /config/custom.css
              subPath: custom.css
            - name: custom-js
              mountPath: /config/custom.js
              subPath: custom.js
            - name: docker
              mountPath: /config/docker.yaml
              subPath: docker.yaml
            - name: proxmox
              mountPath: /config/proxmox.yaml
              subPath: proxmox.yaml
            - name: services
              mountPath: /config/services.yaml
              subPath: services.yaml
            - name: widgets
              mountPath: /config/widgets.yaml
              subPath: widgets.yaml
            - name: logs
              mountPath: /config/logs
      volumes:
        - name: kubernetes
          configMap:
            name: kubernetes
        - name: settings
          configMap:
            name: settings
        - name: bookmarks
          secret:
            secretName: bookmarks
        - name: custom-css
          configMap:
            name: custom-css
        - name: custom-js
          configMap:
            name: custom-js
        - name: docker
          configMap:
            name: docker
        - name: proxmox
          configMap:
            name: proxmox
        - name: services
          configMap:
            name: services
        - name: widgets
          configMap:
            name: widgets
        - name: logs
          emptyDir: {}
